package com.wsh.pattern.uml.composition;

/**
 * class
 *
 * @author wsh
 * @date 2019-07-09 12:10
 */
public class Person {

    private IDCard card;
    private Head head = new Head();
}
