package com.wsh.pattern.uml.dependence;

/**
 * class
 *
 * @author wsh
 * @date 2019-07-08 22:40
 */
public class IDCard {
}
